# Interstellar

./: .gitignore  AGENTS.md  docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  main.py  parse.py  pyproject.toml
backend/api/: application.py  db.py  llm.py  models.py  parse.py  pdf.py  settings.py  test.py  test2.py  test3.py  test4.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/client/: index.ts
frontend/src/client/models/: Body_predict_degree_pathway_predict_post.ts  CompleteDegreePathway_Input.ts  CompleteDegreePathway_Output.ts  CreditsRange.ts  DegreePathwayBase_PathwayCourse_.ts  DegreePathwayCandidate.ts  PathwayCourse.ts  SemesterPlan_PathwayCourse_.ts  SemesterPlan_UHCoursePlan__Input.ts  SemesterPlan_UHCoursePlan__Output.ts  UHCourse.ts  UHCoursePlan_Input.ts  UHCoursePlan_Output.ts  YearPlan_PathwayCourse_.ts  YearPlan_UHCoursePlan__Input.ts  YearPlan_UHCoursePlan__Output.ts
frontend/src/client/services/: DefaultService.ts
frontend/src/components/: CourseCard.tsx  CourseDetail.tsx  FullscreenViewer.tsx  PathwayConfirmModal.tsx  PathwayPreview.tsx  PathwayResultCard.tsx  ThemeToggle.tsx
frontend/src/hooks/: useExportPathwayPdf.ts  usePathwayById.ts  usePathwaySimilarSearch.ts  usePathwayTextSearch.ts  usePredictDegreePathway.ts  usePredictDegreePathwayById.ts
frontend/src/routes/: index.tsx  v1.tsx  v2.tsx
frontend/src/utils/: pathway.ts
